tests/snapshots/examples_fixtures/aoc__2025__aoc_day10_part1.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day10_part1.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day10_part1.flx:47:16
   |
47 |     let left = slice(arr, 0, idx)
   |                ^^^^^

Hint:
  Define it first: let slice = ...;


error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day10_part1.flx:48:17
   |
48 |     let right = slice(arr, idx + 1, len(arr))
   |                 ^^^^^

Hint:
  Define it first: let slice = ...;


error[E004]: Undefined Variable

I can't find a value named `concat`.

  examples/aoc/2025/aoc_day10_part1.flx:49:5
   |
49 |     concat(concat(left, [|value|]), right)
   |     ^^^^^^

Hint:
  Define it first: let concat = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day10_part1.flx:57:40
   |
57 |     parse_pattern_bits(inner, idx + 1, push(acc, bit))
   |                                        ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day10_part1.flx:85:50
   |
85 |         parse_buttons_rec(line, close + 1, stop, push(acc, btn))
   |                                                  ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day10_part1.flx:102:23
    |
102 |     zeros(n, idx + 1, push(acc, 0))
    |                       ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day10_part1.flx:162:21
    |
162 | let machine_lines = [trim(line) | line <- lines, trim(line) != ""]
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day10_part1.flx:163:15
    |
163 | let presses = [machine_min_presses(line) | line <- machine_lines]
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `sum`.

  examples/aoc/2025/aoc_day10_part1.flx:164:7
    |
164 | print(sum(presses))
    |       ^^^

Hint:
  Define it first: let sum = ...;

Found 9 errors.
== stdout ==
<not executed>
